--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.2.6",
     "graphql": "^15.3.0",
     "graphql-request": "^3.0.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
